--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "lab -c -t 100 -r console -o stdout -r html -o coverage/coverage.html test/unit",
     "coverage": "lab -r html -o coverage/coverage.html test/unit && open coverage/coverage.html",
     "lint": "eslint .",
-    "pre-commit": "npm run lint && npm test"
+    "pre-commit": "npm run lint && npm test && nsp check"
   },
   "repository": {
     "type": "git",
@@ -24,9 +24,10 @@
   ],
   "devDependencies": {
     "code": "4.0.0",
-    "eslint": "3.10.2",
+    "eslint": "3.16.0",
     "eslint-config-hapi": "10.0.0",
-    "lab": "11.2.1",
-    "pre-commit": "1.1.3"
+    "lab": "12.1.0",
+    "nsp": "2.6.2",
+    "pre-commit": "1.2.2"
   }
 }
